# scrum-poker

./: docker-compose.yml
server/: .env.example  Cargo.toml  README.md
server/migrations/2019-08-31-145146_create_user/: down.sql  up.sql
server/migrations/2019-09-28-010855_create_rooms/: down.sql  up.sql
server/migrations/2019-09-28-012655_create_games/: down.sql  up.sql
server/migrations/2019-09-28-015855_create_rooms/: up.sql
server/migrations/2019-09-28-018201_create_games_room_uuid_foreign_key/: down.sql  up.sql
server/migrations/2019-09-28-018201_create_room_current_game_uuid_foreign_key/: down.sql  up.sql
server/migrations/2019-09-28-021301_create_room_players/: down.sql  up.sql
server/migrations/2019-09-28-022635_create_game_hands/: down.sql  up.sql
server/src/: lib.rs  main.rs  schema.rs
server/src/client/: mod.rs
server/src/client/channel/: default.rs  mod.rs
server/src/client/store/: default.rs  mod.rs
server/src/common/: error.rs  mod.rs  model.rs
server/src/common/message/: mod.rs  request.rs  response.rs
server/src/poker/: game.rs  mod.rs  model.rs  room.rs
server/src/poker/room/: message.rs  mod.rs
server/src/server/: message.rs  mod.rs
server/src/user/: hasher.rs  info.rs  mod.rs  model.rs  route.rs
server/src/user/auth/: mod.rs  oauth.rs  provider_service.rs
server/src/user/auth/provider/: google.rs  guest.rs  mod.rs  oauth.rs
server/src/websocket/: mod.rs  route.rs  session.rs
web-app/: README.md  angular.json  nx.json  package-lock.json  package.json
web-app/apps/scrum-poker-e2e/: cypress.json
(+23 files in other folders)
