[package]
name = "scrum-poker"
version = "0.1.0"
authors = ["Calvin Lau <calvinlauco@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
actix-web-actors = "1.0.2"
cfg-if = "0.1.10"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"]}
dotenv = "0.14.1"
env_logger = "0.6.2"
failure = "0.1.5"
futures = "0.1.29"
hex = "0.3.2"
log = "0.4.8"
oauth2 = "3.0.0-alpha.3"
r2d2 = "0.8.5"
rand = "0.7.2"
reqwest = "0.9.20"
serde = "1.0.99"
serde_json = "1.0.40"
sha2 = "0.8.0"
url = "1.3.0"
uuid = { version = "0.7.4", features = ["v4"] }


[dev-dependencies]
mockall = "0.5.0"
mockito = "0.20.0"